# xcframework

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/: reference.md
examples/apps/MultiPlatformExample/MultiPlatformExample/: ContentView.swift  MultiPlatformExampleApp.swift
examples/apps/MultiPlatformExample/MultiPlatformExample.xcodeproj/: project.pbxproj
examples/apps/MultiPlatformExample/MultiPlatformExampleTests/: MultiPlatformExampleTests.swift
examples/apps/MultiPlatformExample/MultiPlatformExampleUITests/: MultiPlatformExampleUITests.swift  MultiPlatformExampleUITestsLaunchTests.swift
examples/apps/MyMathPackage/: Package.swift
examples/apps/MyMathPackage/Sources/MyMathPackage/: MyMathPackage.swift
examples/apps/MyMathPackage/Tests/MyMathPackageTests/: MyMathPackageTests.swift
examples/end-to-end/mymath-lib/: Cargo.toml
examples/end-to-end/swift-exe/: Package.swift  readme.md
examples/end-to-end/swift-exe/Sources/swift-cmd/: swift_cmd.swift
examples/end-to-end/tuist-ios/: Project.swift  README.md
examples/end-to-end/tuist-ios/TuistIos/Sources/: TuistIosApp.swift
examples/end-to-end/tuist-ios/TuistIos/Tests/: TuistIosTests.swift
examples/multi-platform/mymath-lib/: Cargo.toml  xcframework.toml
examples/multi-platform/mymath-lib/src/: lib.rs
examples/multi-platform/mymath-lib/xtask/: Cargo.toml
examples/multi-platform/mymath-lib/xtask/src/: main.rs
examples/multi-platform/tuist-workspace/: README.md  Workspace.swift
examples/multi-platform/tuist-workspace/App-iOS/: Project.swift
examples/multi-platform/tuist-workspace/App-iOS/Sources/: AppMain.swift
examples/multi-platform/tuist-workspace/App-iOS/Tests/: TuistTests.swift
examples/multi-platform/tuist-workspace/App-macOS/: Project.swift
examples/multi-platform/tuist-workspace/App-macOS/Sources/: AppMain.swift
examples/multi-platform/tuist-workspace/Shared/: Project.swift
examples/with-tuist/mymath-lib/include/: module.modulemap
examples/with-tuist/tuist-ios/: README.md
examples/with-tuist/tuist-ios/Tuist/: Package.swift
examples/with-tuist/tuist-workspace/: Project.swift  Workspace.swift
exploring/c-code-to-xcframework/: Package.swift  app.c  libmymath.c  readme.md  swift-package.sh  xcframework.sh
exploring/c-code-to-xcframework/include/: libmymath.h  module.modulemap
exploring/c-code-to-xcframework/swift-cmd/: Package.swift  README.md
exploring/c-code-to-xcframework/swift-cmd/Sources/swift-cmd/: swift_cmd.swift
src/: config.rs  core.rs  lib.rs  main.rs  readme.tpl.md
src/cli/: configuration.rs  internal.rs  mod.rs  xc_cli.rs
src/cmd/: cargo.rs  lipo.rs  mod.rs  modulemap.rs  rustup.rs  xcodebuild.rs  zip.rs
src/conf/: args.rs  cli.rs  configuration.rs  mod.rs  targets.rs  xc_cli.rs  xcframework.rs
src/config/: core.rs  internal.rs
src/core/: build.rs  modulemap.rs  platform.rs  plist.rs
src/ext/: cargo.rs  mod.rs  path.rs  triple.rs
src/ops/: cargo.rs
temp/swift-exe/: Package.swift
tests/: run.rs  test.rs  validation.rs
tests/project/: Cargo.toml
tests/project/src/: lib.rs
tests/project/src/include/: module.modulemap
