[package]
name = "xcframework"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/human-solutions/xcframework"
description = "A Cargo plugin and library for building Apple XCFrameworks"
categories = ["development-tools::cargo-plugins", "development-tools::ffi"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
camino-fs = { version = "0.1.3", features = ["serde"] }
cargo_metadata = { version = "0.19", features = ["builder"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yansi = "1.0"
fs-err = "3.1"
zip-extensions = { version = "0.8", default-features = false }
xshell = "0.2"
glob = "0.3"
xflags = "0.3"

[dev-dependencies]
tempfile = "3.20"
