[package]
name = "mymath-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mymath"
crate-type = ["staticlib", "cdylib"]

[package.metadata.xcframework]
lib-type = "staticlib"
include-dir = "include"
iOS = { simulator = true }
macOS = true

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
