[package]
name = "mymath-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mymath"
crate-type = ["staticlib", "cdylib"]

[package.metadata.xcframework]
lib-type = "cdylib"
include-dir = "include"
iOS = true
macOS = true
simulators = true

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
